<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_answer_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dialog_answer_textbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="type something!"
            android:inputType="textMultiLine"
            android:maxLines="10" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:id="@+id/dialog_answer_quant_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_answer_spinner"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/dialog_answer_quant_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_answer_location"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/dialog_answer_location_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Where are you?"
            android:ems="10" />

        <Button
            android:id="@+id/dialog_answer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_qa_button" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_answer_hint"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</RelativeLayout>