<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_new_question_text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/dialog_new_question_text"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_new_question_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/dialog_new_question_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" >

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_new_question_location"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/dialog_new_question_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

            <CheckedTextView
                android:id="@+id/dialog_new_question_quant"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:checked="true"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:clickable="true"
                android:text="@string/dialog_new_question_quantifier" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_new_question_type"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/dialog_new_question_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/dialog_new_question_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_new_question_create" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>